--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -247,7 +247,7 @@
         <h2 id="hdng4">Employment-related income</h2>
 <p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
 <p>Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
-<div id="ajax-benefits"> 
+<div id="emp-related"> 
 <details><summary>Registered pension plan benefits</summary>
 <p>If you receive registered pension plan (RPP) benefits as a result of employment income that was exempt from income tax under section 87 of the Indian Act, the RPP benefits will also be exempt from income tax. If a portion of your employment income was exempt, then a similar portion of the related registered pension plan benefits will be exempt from income tax.</p>
 </details>  
