--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -1090,7 +1090,7 @@
 
 <section id="ajax-type-emp-related" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Type of employment-related income</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-benefits"></div>
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop1.html#emp-related"></div>
 	</div></section>
 
 
