--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -314,7 +314,7 @@
 
 <details><summary>What if the income is employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
 <div id="ajax-non-emp">
-<p>Generally, if the employee is receiving employment-related income, for example: unemployment insurance benefits, retiring allowances, Canada Pension Plan (CPP) payments, Quebec Pension Plan (QPP) payments, Registered Pension Plan (RPP) benefits or Wage Loss Replacement Plan (WLRP) benefits, the employment-related income is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+<p>Generally, if the employee is receiving employment-related income, the employment-related income is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
 
 <p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
 
