--- a/payroll/calculate/payment/agriculture.html
+++ b/payroll/calculate/payment/agriculture.html
@@ -361,9 +361,14 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="">ITA: </a></dt> <dd>XXX </dd>
-<dt><a href="">ITA: </a></dt> <dd>XXX </dd>
-	
+<dt><a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">CPP: 6(2)(a)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">CPP: 13(3)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/regulations/C.R.C.,_c._385/index.html">CPPR: 2(2)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/regulations/C.R.C.,_c._385/index.html">CPPR: 29</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">EIA: 5(2)(h)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">EIA: 5(6)(e)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/regulations/SOR-96-332/index.html">EIR: 9(1)</a></dt> <dd>XXX </dd>
+<dt><a href="http://laws-lois.justice.gc.ca/eng/regulations/SOR-96-332/index.html">EIR: 9(2)</a></dt> <dd>XXX </dd>	
 </dl>
 </div>
 </div>
