--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -261,7 +261,7 @@
 
 <p>You must report all income and deductions on a T4 or T4A slip for First Nations workers regardless of whether the income is taxable or exempt.</p>
 
-<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers only to an worker who is registered or entitled to be registered under the Indian Act. Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
+<p><span class="fa fa-balance-scale fa-lg text-muted"></span> The term First Nations worker on this page refers <strong>only</strong> to an worker who is registered or entitled to be registered under the Indian Act. Many Indigenous people in Canada prefer not to describe themselves as <a href="#ajax-def2" aria-controls="ajax-def2" class="overlay-lnk" role="button">Indians <span class="far fa-question-circle"></span></a> and view this term as rooted in colonialism and racism. Under the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-5/">Indian Act</a>, the precise legal meaning of the term "Indian" refers to First Nations persons who are entitled to registration. </p>
 
 
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
@@ -292,7 +292,7 @@
   <li>             
 <h3 id="step1">Determine if the First Nations employment income is exempt from tax</h3>
 <div id="ajax-reg">
-<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
 <p>To determine if the First Nations employment income is tax-exempt or partially tax-exempt, ask your employee to fill out part 1 of Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/td1-in.html">TD1-IN</a>, Determination of Exemption of an Indian's Employment Income to certify they meet <strong>all</strong> of the following conditions for the exemption:</p>
 
@@ -637,7 +637,7 @@
 
 <li><h3 id="tab2-step1">Determine if the self-employment income is exempt from tax</h3>
 <div id="ajax-reg-tab2">
-<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
 <p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
 <p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
@@ -859,7 +859,7 @@
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 <li><h3 id="tab3-step1">Determine if the non-employment income is exempt from tax</h3>
-<p> The exemption from tax under section 87 of the Indian Act only applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
