--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -886,12 +886,18 @@
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <h5>Other income</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
+</ul>
+ <h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small></li>
-
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
  <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
+</ul>
+<h5>Lump-sum payments</h5>
+<ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
 </ul></li>
 </ul>
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
