--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -572,14 +572,25 @@
  <li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Withhold <strong>only</strong> if you filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a></small></li>
 </ul></li>
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small>- Report CPP contributions and pensionable earnings <strong>only</strong> if you filed Form CPT124</small> </li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>- Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>tax-exempt</strong> employment income</small></li>
+
+</ul>
+<h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 20  <small>- <strong>Do not</strong> report if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>tax-exempt</strong> non-eligible retiring allowances you paid</small></li>
- <li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>tax-exempt</strong> employment income</small></li>
-</ul></li>
+</ul>
+
+<h5>Union dues</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Box 44 <small>- <strong>Do not</strong> report if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 	
+</ul>
+
+ </li>
 </ul>
 <div id="ajax-cpp-info">
 <p>CPP <strong>is only </strong>withheld on the portion of the income that is taxable. Where the income is not taxable, CPP is <strong>not </strong>withheld, <strong>except </strong>if the employer has filed Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">CPT124</a> - Application to Cover the Employment of an Indian in Canada under the Canada Pension Plan whose Income is Exempt under the Income Tax Act.</p>
@@ -599,19 +610,35 @@
  </ul></li>
 
 <li class="cnjnctn-col"><h4>Reporting obligations</h4>
+
+ <h5>Income and source deductions</h5>
  <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 14 <small>- Report <strong>only on taxable</strong>  employment income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>only tax-exempt</strong> employment income</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Boxes 16 and 26 <small>- Report CPP contributions and pensionable earnings <strong>only on taxable income</strong> <strong>or</strong> on all income if you filed Form CPT124</small> </li>
-<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>
+<li><span class="fas fa-check fa-li text-success"></span>Boxes 18 and 24 <small>Report EI premiums and insurable earnings on <strong>all</strong> income</small></li>	 
+</ul>
+
+ <h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Box 20 <small>- Report <strong>only on taxable income</strong> 
  if you withheld RPP contributions (you must provide proof to your employee of RPP contributions for all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
+
 <li><span class="fas fa-check fa-li text-success"></span>Code 66 <small>- Report <strong>only on taxable income</strong> if you paid eligible retiring allowances </small></li>
  <li><span class="fas fa-check fa-li text-success"></span>Code 67 <small>- Report <strong>only on taxable income </strong> if you paid non-eligible retiring allowances</small></li>
 <li><span class="fas fa-check fa-li text-success"></span>Code 69 <small>- Report <strong>only tax-exempt</strong> if you paid non-eligible retiring allowances</small></li>
-<li><span class="fas fa-check fa-li text-success"></span>Code 71 <small>- Report <strong>only tax-exempt</strong> employment income</small></li>
+</ul>
+
+ <h5>Union dues</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> Box 44 <small>- Report <strong>only on taxable income</strong> if you withheld union dues (you must provide proof to your employee of union dues withheld from all tax-exempt income, your employee will use this amount to fill out Form T90)</small></li> 
+</ul>
+
+<h5>Taxable benefits</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span>Codes for taxable benefits (for example, code 40) <small class="text-muted">- Report <strong>only on taxable income</strong> if you provided employment benefits</small> </li>
-</ul></li>
+</ul>
+</li>
 </ul>
  <div data-ajax-replace="#ajax-cpp-info"></div>
                      
