--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -557,7 +557,9 @@
  </li>
 
 
-<li><h3 id="step4">Withhold and report the payment on a T4 slip</h3>
+<li><h3 id="step4">Withhold and report the payment on a slip</h3>
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>the type of payment </strong>:</p>
+<h4>T4 slip - Employment income </h4>
 
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
 
@@ -643,6 +645,60 @@
                      
 	 </div>
   </details>
+
+<h4>T4A slip - Payment made for certain employment-related income</h4>
+
+<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
+ <details><summary>Income all exempt</summary> 
+<div id="ajax-t4a-how-ex">
+<ul class="list-unstyled cnjnctn-type-and ">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+ <h5>Other income</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
+</ul>
+ <h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span>Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
+</ul>
+<h5>Lump-sum payments</h5>
+<ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
+</ul></li>
+</ul>
+<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
+  </details>
+ <details><summary>Income partly-exempt</summary> 
+<ul class="list-unstyled cnjnctn-type-and ">
+<li class="cnjnctn-col"><h4>Withholding obligations</h4>
+ <ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
+</ul></li>
+<li class="cnjnctn-col"><h4>Reporting obligations</h4>
+<h5>Pension or superannuation</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small>- Report <strong>taxable</strong> pension or superannuation</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small> </li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
+</ul>
+<h5>Lump-sum payments</h5>
+ <ul class="fa-ul mrgn-bttm-lg">
+ <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small>- Report <strong>taxable</strong> lump-sum payments</small></li>
+ <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
+</ul>
+</li>
+</ul>
+<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
+</details>
 
 <div id="ajax-how-deduct-report">
 <p class="mrgn-tp-lg">Learn more:</p>
@@ -880,84 +936,7 @@
 
 </ol>
  </details>
-<details id="subtab3">
-        <summary>Non-employment income</summary>
-<h2 class="h3">Steps</h2>
-  <ol class="lst-stps stps-strpd">
-<li><h3 id="tab3-step1">Determine if the non-employment income is exempt from tax</h3>
-<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
-<hr>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the non-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
-
- 
-<p>You must deduct CPP, EI and income tax on the non-employment income, pension or superannuation, or lump-sum payments same as regular workers. </p> 
-</li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span>If the non-employment income meets all conditions for the exemption, continue to <a href="#tab3-step2">Step 2 - </a>.</li>
-</ul>
- </li>
- <li><h3 id="tab3-step2">Determine the percentage of income related to non-employment on a reserve</h3>
-</li>
-<li><h3 id="tab3-step3">Withhold and report the payment on a slip</h3>
-
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
- <details><summary>Income all exempt</summary> 
-<div id="ajax-t4a-how-ex">
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
- <h5>Other income</h5>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Code 144 <small>- Report <strong>tax-exempt</strong> other income</small></li>
-</ul>
- <h5>Pension or superannuation</h5>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-check fa-li text-success"></span>Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
-</ul>
-<h5>Lump-sum payments</h5>
-<ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
-</ul></li>
-</ul>
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
-  </details>
- <details><summary>Income partly-exempt</summary> 
-<ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><h4>Withholding obligations</h4>
- <ul class="fa-ul mrgn-bttm-lg">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li>  
-</ul></li>
-<li class="cnjnctn-col"><h4>Reporting obligations</h4>
-<h5>Pension or superannuation</h5>
- <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span> Box 016 <small>- Report <strong>taxable</strong> pension or superannuation</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 146 <small>- Report <strong>tax-exempt</strong> pension or superannuation</small> </li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 195 <small>- Report <strong>tax-exempt</strong> PRPP payments</small> </li>
-</ul>
-<h5>Lump-sum payments</h5>
- <ul class="fa-ul mrgn-bttm-lg">
- <li><span class="fas fa-check fa-li text-success"></span> Box 018 <small>- Report <strong>taxable</strong> lump-sum payments</small></li>
- <li><span class="fas fa-check fa-li text-success"></span> Code 148 <small>- Report <strong>tax-exempt</strong> lump-sum payments</small></li>
-</ul>
-</li>
-</ul>
-<p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
-</details>
-
-<div data-ajax-replace="#ajax-how-deduct-report"></div>
-</li>
-
-</ol>
- </details>
  </div>
  </div>
 	
