--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -278,7 +278,8 @@
         <h3 id="hdng5-1">Connecting factors for business income</h3>
 <p>If your business income is situated on a reserve, it is exempt from tax under section 87 of the Indian Act. The courts have established that determining whether income is situated on a reserve, and thus exempt from tax, requires identifying the various factors connecting the income to a reserve and weighing the significance of each factor. This is referred to as the “connecting factors test”.</p>
 <p>Your business income is generally exempt from tax when the actual income-earning activities of the business take place on a reserve. If your business activities are mostly carried on off a reserve, your business income would generally be considered taxable because the exemption under section 87 does not apply.</p>
-<p>When applying the connecting factors test to business income, the courts have indicated that the most significant connecting factors are:</p>
+<div id="ajax-self-connect">
+<p>The courts have found the most significant factors in determining if the income is situated on a reserve are:</p>
 <div id="ajax-self-connect">
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Where the income earning activities of the business take place</li>
