--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -730,7 +730,7 @@
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the self-employment income <strong>does not</strong> meet all conditions for the exemption, <strong>do not</strong> continue to next step.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the self-employment income is <strong>not considered to be situated on a reserve</strong>, <strong>do not</strong> continue to next step.</p> 
 <p>You can call CRA at <strong>1-800-959-8281</strong> to confirm.  </p> 
   <div id="ajax-notreg2a">
 <p>Your remitting and reporting obligations are the same as other self-employed workers in the same industry. </p> 
