--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -741,92 +741,15 @@
 
 <li><h3 id="tab2-step2">Determine the percentage of income situated on a reserve</h3>
  <div id="ajax-how-tab2-prorate">
-<p>To determine the portion of income situated on a reserve, two factors are generally taken into account:</p>
+ 
+<p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">Whether an actual "income" was earned</li>
-<li class="cnjnctn-col">The extent to which the income was earned on a reserve</li>
-</ul>
+<p>Generally, the income is partly-exempt from income tax if the self-employed First Nations worker's income-earning activities are off reserve. </p>
 
-<h4>How to <strong>calculate the percentage</strong> of income related to self-employment earned on and off a reserve</h4>
+<p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve. </p>
 
-<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<p>If that self-employment income was partly-exempt from income tax, the business expenses arising from the exempt share of that income will also be exempt from income tax, unless another allocation can be shown to be more reasonable.</p>
 
-			<li><span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-hashtag fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">Total working days on a reserve (do not include vacation days, sick days and statutory holidays)  </span> 
-                                    </li>
-			 <li class="brdr-bttm">
-                                 <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total working days </span>
-                                 <div class="mrgn-tp-md"></div>
-                              </li>
- 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> Result 
-                                    </span></span> </li>
-
- 			<li class="brdr-bttm">
-                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-percent fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 100 </span>
-                                 <div class="mrgn-tp-md"></div>
-                              </li>
-
-		
-                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the % of income earned on reserve (paid leave such as vacation days, sick days and statutory holidays leave is also exempt)
-                                    </span></span> </li>
-					
-                  </ul>
-
-<details><summary>Calculation example</summary>
-<p>An employer requires their status Indian employee to perform duties related to their employment both on and off reserve. The employee had a total of 220 working days in the year, 44 of which were on reserve. These days spent working on the reserve did not include either vacation or sick leave. </p>
-<p>The percentage of the status Indian employee’s duties related to employment performed on a reserve is calculated as follows:</p>
-<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
-
-			<li><span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-hashtag fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">44 total working days on a reserve (not including vacation days, sick days and statutory holidays)  </span> 
-                                    </li>
-			 <li class="brdr-bttm">
-                                 <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 220 total working days </span>
-                                 <div class="mrgn-tp-md"></div>
-                              </li>
- 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> 0.2 is the result 
-                                    </span></span> </li>
-
- 			<li class="brdr-bttm">
-                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-percent fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 100 </span>
-                                 <div class="mrgn-tp-md"></div>
-                              </li>
-
-		
-                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-percent fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> 20% is the percentage of duties of employment performed on reserve (paid leave such as vacation days, sick days and statutory holidays is also exempt)
-                                    </span></span> </li>
-					
-                  </ul>
-</details>
 </div>
 
 </li>
