--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -744,9 +744,9 @@
  
 <p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
 
-<p>Generally, the income is partly-exempt from income tax if the self-employed First Nations worker's income-earning activities are off reserve. </p>
+<p>Generally, the income is partly-exempt from income tax if part of the self-employed First Nations worker's income-earning activities take place on reserve and part off of a reserve. </p>
 
-<p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve. </p>
+<p>TThe exemption is prorated to the portion of the income related to the income-earning activities on the reserve.</p>
 
 <p>If that self-employment income was partly-exempt from income tax, the business expenses arising from the exempt share of that income will also be exempt from income tax, unless another allocation can be shown to be more reasonable.</p>
 
