--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -717,23 +717,9 @@
 
  </details>
 
-<details id="subtab4">
-        <summary>Self-employed fishing income</summary>
-
- </details>
-
-<details id="subtab5">
-        <summary>Self-employed farming income</summary>
-
- </details>
-
-<details id="subtab6">
-        <summary>Self-employed barber or hairdresser</summary>
-
- </details>
 
  <details id="subtab7">
-        <summary>Self-employed driver</summary>
+        <summary>Self-employed fishing, farming, barber or hairdresser, driver income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
