--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -713,7 +713,7 @@
  </details>
  
  <details id="subtab2">
-        <summary>Emmployment-related income</summary>
+        <summary>Employment-related income</summary>
 
  </details>
 
