test diff alert lay out

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -841,7 +841,16 @@ html:lang(fr) .cnjnctn-or:before {
 	<p>Each set of questions applies separately to each residential property owned (if more than one property is owned).</p>
 </section>
 
-			  
+	<section class="alert alert-info">
+  
+  <p>Each set of questions applies separately to:</p>
+		<ul>
+<li>each owner of a residential property (if there is more than one owner)</li>
+			<li>each residential property owned (if more than one property is owned)</li>
+			
+		</ul>
+
+</section>		  
                   </div>
                   <p class="wb-fieldflow-label">You are: </p>
                 </div>
