update alert in tool

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -835,15 +835,11 @@ html:lang(fr) .cnjnctn-or:before {
                     <p class="text-muted gc-font-2019">Make a selection and <strong> scroll down</strong> for further questions and results.</p>
              
 
-<section class="alert alert-info">
-  
-  <p>Each set of questions applies separately to each owner of a residential property (if there is more than one owner).</p>
-	<p>Each set of questions applies separately to each residential property owned (if more than one property is owned).</p>
-</section>
+
 
 	<section class="alert alert-info">
   
-  <p>Each set of questions applies separately to:</p>
+  <p>Each set of questions applies <strong>separately</strong> to:</p>
 		<ul>
 <li>each owner of a residential property (if there is more than one owner)</li>
 			<li>each residential property owned (if more than one property is owned)</li>
