add to and pattern

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -770,7 +770,7 @@ html:lang(fr) .cnjnctn-or:before {
         <p>You are an <strong>owner</strong> of the residential property</p>
       </li>
       <li class="cnjnctn-col">
-        <p>You are an <strong>affected owner</strong> of the residential property</p>
+        <p>You are determined to be an <strong>affected owner</strong> of the residential property</p>
       </li>
     </ul>
     <details class="mrgn-tp-lg">
