--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -1006,11 +1006,11 @@ input[type='radio'] {
 
 
 <aside id="gcnav-side">
-           <mark> <h2 class="h5 mrgn-tp-lg">Technical information</h2> </mark>
+          <h2 class="h5 mrgn-tp-lg">Technical information</h2> 
             <ul>
-                 <mark> <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">Underused Housing Tax notices</a></li> </mark>
+                <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information/underused-housing-tax-notices.html" target="_blank">Underused Housing Tax notices</a></li> 
     
-            <mark> <li><a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html" target="_blank">Underused Housing Tax Act</a></li></mark>
+           <li><a href="https://laws-lois.justice.gc.ca/eng/acts/U-0.5/index.html" target="_blank">Underused Housing Tax Act</a></li>
             </ul>
         </aside>
 
