--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -267,8 +267,9 @@
 <p>Determine your withholding and reporting obligations based on the nature of the payment you made:</p>
 <ul>
 <li><a href="#subtab1" class="wb-tabs-ext">Employment income</a> (including employment-related income)</li>
-<li><a href="#subtab2" class="wb-tabs-ext">Self-employment income</a></li>
-<li><a href="#subtab3" class="wb-tabs-ext">Non-employment income</a> (for example: payment made to a recipient for education allowances, scholarships or training allowances)</li>
+<li><a href="#subtab2" class="wb-tabs-ext">Employment-related income</a> (for example, pension income, retiring allowances, RRSP and CPP/QPP)</li>
+<li><a href="#subtab3" class="wb-tabs-ext">Self-employed fishing, farming, barber, hairdresser or driver income</a></li>
+<li><a href="#subtab4" class="wb-tabs-ext">Other self-employed income</a></li>
 </ul>
 
 <details><summary><span class="fas fa-comments"></span> What if you do not know if a worker is an employee or is self-employed </summary>
@@ -310,19 +311,6 @@
 <li><span class="fas fa-check fa-li text-success"></span> A change in the employer’s residence, on or off reserve</li>
 <li><span class="fas fa-check fa-li text-success"></span> A change in the location of the employment duties</li>
 </ul>
-</details>
-
-<details><summary>What if the income is employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP)</summary>
-<div id="ajax-non-emp">
-<p>Generally, if the employee is receiving employment-related income, the employment-related income is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
-
-<p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
-
-<p> <a href="#ajax-type-emp-related" aria-controls="ajax-type-emp-related" class="overlay-lnk" role="button">Type of employment-related income <span class="far fa-question-circle"></span></a> </p>
-
-
-<p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example employment-related income <span class="far fa-question-circle"></span></a> </p>
-</div>
 </details>
 
 <p>Learn more about registration under the Indian Act and the Indian Register:</p>
@@ -557,9 +545,7 @@
  </li>
 
 
-<li><h3 id="step4">Withhold and report the payment on a slip</h3>
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>the type of payment </strong>:</p>
-<h4>T4 slip - Employment income </h4>
+<li><h3 id="step4">Withhold and report the payment on a T4 slip</h3>
 
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
 
@@ -646,7 +632,63 @@
 	 </div>
   </details>
 
-<h4>T4A slip - Payment made for certain employment-related income</h4>
+<div id="ajax-how-deduct-report">
+<p class="mrgn-tp-lg">Learn more:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
+<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
+</ul>
+ </div>	 
+</li>
+
+</ol>
+ </details>
+ 
+ <details id="subtab2">
+        <summary>Employment-related income</summary>
+
+<h2 class="h3">Steps</h2>
+  <ol class="lst-stps stps-strpd">
+
+<li><h3 id="tab2-step1">Determine if the employment-related income is exempt from tax</h3>
+<div id="ajax-reg-tab2">
+<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+</div>
+<p>Generally, if the employee is receiving employment-related income, the employment-related income (for example, pension income, retiring allowances, RRSP and CPP/QPP) is exempt from income tax when the payment is received as a result of employment income that was exempt from income tax. </p>
+
+<p> <a href="#ajax-type-emp-related" aria-controls="ajax-type-emp-related" class="overlay-lnk" role="button">Type of employment-related income <span class="far fa-question-circle"></span></a> </p>
+
+
+<p> <a href="#ajax-example-emp-related" aria-controls="ajax-example-emp-related" class="overlay-lnk" role="button">Example employment-related income <span class="far fa-question-circle"></span></a> </p>
+
+<hr>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employment income was <strong>not exempt</strong>, <strong>do not</strong> continue to next step.</p> 
+
+<p>You must deduct CPP, EI and income tax as you would for your other employees. </p> 
+</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the employment income was exempt or partly-exempt, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of employment-reatled income that was exempt</a>.</li>
+</ul>
+ </li>
+
+<li><h3 id="tab2-step2">Determine the percentage of employment-reatled income that was exempt</h3>
+ <div id="ajax-how-tab2-step2-prorate">
+ 
+<p>You need to determine the portion of the employment-related income of the First Nations employee that relates to when the payment was received as a result of employment income. </p>
+
+<p>Generally, the employment-related income is partly-exempt from income tax if part of the First Nations employment income was partly-exempt. </p>
+
+<p>The exemption is prorated to the portion of the income related to the employment-related income on the payment received as a result of employment income.</p>
+
+<p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
+
+</div>
+
+</li>
+
+
+<li><h3 id="tab2-step3">Withhold and report the payment on a T4A slip</h3>
 
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
  <details><summary>Income all exempt</summary> 
@@ -708,12 +750,7 @@
 </ul>
  </div>	 
 </li>
-
 </ol>
- </details>
- 
- <details id="subtab2">
-        <summary>Employment-related income</summary>
 
  </details>
 
@@ -723,8 +760,8 @@
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
 
-<li><h3 id="tab2-step1">Determine if the self-employment income is exempt from tax</h3>
-<div id="ajax-reg-tab2">
+<li><h3 id="tab3-step1">Determine if the self-employment income is exempt from tax</h3>
+<div id="ajax-reg-tab3">
 <p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
 
 <p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
