--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -755,7 +755,7 @@
  </details>
 
 
- <details id="subtab7">
+ <details id="subtab3">
         <summary>Self-employed fishing, farming, barber or hairdresser, driver income</summary>
 <h2 class="h3">Steps</h2>
   <ol class="lst-stps stps-strpd">
@@ -778,11 +778,11 @@
   <div id="ajax-notreg2a">
 <p>Your remitting and reporting obligations are the same as other self-employed workers in the same industry. </p> 
 </div></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the self-employment income meets all conditions for the exemption, continue to <a href="#tab2-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the self-employment income meets all conditions for the exemption, continue to <a href="#tab3-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
 </ul>
  </li>
 
-<li><h3 id="tab2-step2">Determine the percentage of income situated on a reserve</h3>
+<li><h3 id="tab3-step2">Determine the percentage of income situated on a reserve</h3>
  <div id="ajax-how-tab2-prorate">
  
 <p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
@@ -797,11 +797,7 @@
 
 </li>
 
-<li><h3 id="tab2-step4">Withhold and report the payment on a slip</h3>
-<div id="ajax-how-self-intro">
-<p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a slip depending on <strong>who the payment is made to</strong>:</p>
-</div>
-<h4>T4 slip - Payment made to a self-employed fisher, a self-employed barber or hairdresser, or a self-employed taxi driver and driver of other passenger-carrying vehicles</h4>
+<li><h3 id="tab3-step3">Withhold and report the payment on a slip</h3>
 <p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4-how-self-ex">
@@ -854,7 +850,26 @@
 	   </div>
   </details>
 
-<h4>T4A slip - Payment made to other self-employed workers</h4>
+<div data-ajax-replace="#ajax-how-deduct-report"></div>
+
+</li>
+
+</ol>
+ </details>
+<details id="subtab4">
+        <summary>Other self-employed income</summary>
+
+<h2 class="h3">Steps</h2>
+  <ol class="lst-stps stps-strpd">
+
+<li><h3 id="tab4-step1">Determine if the self-employment income is exempt from tax</h3>
+
+</li>
+
+<li><h3 id="tab4-step2">Determine the percentage of income situated on a reserve</h3>
+</li>
+
+<li><h3 id="tab4-step3">Withhold and report the payment on a T4A slip</h3>
 <p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
    <div id="ajax-t4a-how-self-ex">
@@ -901,9 +916,6 @@
 </li>
 
 </ol>
- </details>
-<details id="subtab3">
-        <summary>Other self-employed income</summary>
 
  </details>
  </div>
