--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -783,16 +783,15 @@
  </li>
 
 <li><h3 id="tab3-step2">Determine the percentage of income situated on a reserve</h3>
- <div id="ajax-how-tab2-prorate">
+ <div id="ajax-how-tab3-prorate">
  
 <p>You need to determine the portion of the income-earning activities of the self-employed First Nations worker that takes place on a reserve. </p>
 
-<p>Generally, the income is partly-exempt from income tax if the self-employed First Nations worker's income-earning activities are off reserve. </p>
+<p>Generally, the income is partly-exempt from income tax if part of the self-employed First Nations worker's income-earning activities take place on reserve and part off of a reserve. </p>
 
-<p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve. </p>
+<p>The exemption is prorated to the portion of the income related to the income-earning activities on the reserve.</p>
 
 <p>If that self-employment income was partly-exempt from income tax, the business expenses arising from the exempt share of that income will also be exempt from income tax, unless another allocation can be shown to be more reasonable.</p>
-
 </div>
 
 </li>
@@ -863,10 +862,31 @@
   <ol class="lst-stps stps-strpd">
 
 <li><h3 id="tab4-step1">Determine if the self-employment income is exempt from tax</h3>
+<div id="ajax-reg-tab4">
+<p> The exemption from tax under section 87 of the Indian Act <strong>only</strong> applies to an individual who is registered or entitled to be registered under the Indian Act. </p> 
+
+<p>The self-employment income earned by the First Nations worker must be  situated on a reserve to be exempt from tax. </p>
+<p>To determine if the income is situated on a reserve, you must apply the <a href="#factors-test" aria-controls="factors-test" class="overlay-lnk" role="button">connecting factors test <span class="far fa-question-circle"></span></a> to the income to meet all conditions for the exemption.</p>
+
+<p> <a href="#self-connect" aria-controls="self-connect" class="overlay-lnk" role="button">Examples of business or self-employment income situated on a reserve <span class="far fa-question-circle"></span></a> </p>
+
+</div>
+
+<hr>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the self-employment income is <strong>not considered to be situated on a reserve</strong>, <strong>do not</strong> continue to next step.</p> 
+<p>You can call CRA at <strong>1-800-959-8281</strong> to confirm.  </p> 
+  <div id="ajax-not-tab4">
+<p>Your remitting and reporting obligations are the same as other self-employed workers in the same industry. </p> 
+</div></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the self-employment income meets all conditions for the exemption, continue to <a href="#tab4-step2">Step 2 - Determine the percentage of income situated on a reserve</a>.</li>
+</ul>
 
 </li>
 
 <li><h3 id="tab4-step2">Determine the percentage of income situated on a reserve</h3>
+<div data-ajax-replace="#ajax-how-tab3-prorate"></div>
 </li>
 
 <li><h3 id="tab4-step3">Withhold and report the payment on a T4A slip</h3>
