--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -684,6 +684,11 @@
 <p>If that employment income was partly-exempt from income tax, the employment-related income arising from the exempt share of that income will also be exempt from income tax.</p>
 
 </div>
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is all tax-exempt, continue to <a href="#ajax-tab2-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab2-step3b">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income is partly-exempt</strong>.</li>
+            </ul>
 
 </li>
 
@@ -692,7 +697,7 @@
 
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made to a First Nations recipient:</p>
  <details><summary>Income all exempt</summary> 
-<div id="ajax-t4a-how-ex">
+<div id="ajax-tab2-step3a">
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -716,8 +721,9 @@
 </ul></li>
 </ul>
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
-  </details>
+ </div>	  </details>
  <details><summary>Income partly-exempt</summary> 
+<div id="ajax-tab2-step3b">
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
@@ -740,6 +746,7 @@
 </li>
 </ul>
 <p class="mrgn-tp-md">Generally, income is exempt from tax when a person receives them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p>
+</div>
 </details>
 
 <div id="ajax-how-deduct-report">
@@ -794,12 +801,18 @@
 <p>If that self-employment income was partly-exempt from income tax, the business expenses arising from the exempt share of that income will also be exempt from income tax, unless another allocation can be shown to be more reasonable.</p>
 </div>
 
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the self-employed income is all tax-exempt, continue to <a href="#ajax-tab3-step3a">Step 3 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab3-step3b">Step 3 - Withhold and report the payment on a T4 slip</a> and select <strong>income is partly-exempt</strong>.</li>
+            </ul>
+
 </li>
 
-<li><h3 id="tab3-step3">Withhold and report the payment on a slip</h3>
+<li><h3 id="tab3-step3">Withhold and report the payment on a T4 slip</h3>
 <p>Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
-   <div id="ajax-t4-how-self-ex">
+   <div id="ajax-tab3-step3a">
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
@@ -822,7 +835,7 @@
   </details>
 
  <details><summary>Income partly-exempt</summary> 
-   <div id="ajax-t4-how-self-part">
+    <div id="ajax-tab3-step3b">
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
