--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -900,12 +900,18 @@
 
 <li><h3 id="tab4-step2">Determine the percentage of income situated on a reserve</h3>
 <div data-ajax-replace="#ajax-how-tab3-prorate"></div>
+
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the self-employed income is all tax-exempt, continue to <a href="#ajax-tab4-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab4-step3b">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income is partly-exempt</strong>.</li>
+            </ul>
 </li>
 
 <li><h3 id="tab4-step3">Withhold and report the payment on a T4A slip</h3>
 <p>Generally, you must withhold the following deductions and report on a <strong>T4A slip</strong> the payment you made: </p>
  <details><summary>Income all exempt</summary> 
-   <div id="ajax-t4a-how-self-ex">
+   <div id="ajax-tab4-step3a">
 
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
@@ -924,7 +930,7 @@
   </details>
 
  <details><summary>Income partly-exempt</summary> 
-   <div id="ajax-t4a-how-self-part">
+   <div id="ajax-tab4-step3b">
 <ul class="list-unstyled cnjnctn-type-and ">
 <li class="cnjnctn-col"><h4>Withholding obligations</h4>
  <ul class="fa-ul mrgn-bttm-lg">
