--- a/payroll/calculate/payment/first-nations2.html
+++ b/payroll/calculate/payment/first-nations2.html
@@ -530,9 +530,9 @@
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your First Nations employee performs certain duties of their employment duties on a reserve, continue to <a href="#step3f">Step 3f - Calculate the proration of the employment income - Guideline 1 (propration rule).</a></li>
             </ul>
 </li>
-<li><h4 id="step3f">Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
+<li><h4>Calculate the proration of the employment income - Guideline 1 (propration rule)</h4>
 <details><summary>Your First Nations employee performs less than 90% of their employment duties on a reserve</summary>
-<p>Generally, the income is partly-exempt from income tax if your First Nations employee performs less than 90% of the duties related to their employment on a reserve and the income is not exempt in other guidelines.</p>
+<p id="step3f">Generally, the income is partly-exempt from income tax if your First Nations employee performs less than 90% of the duties related to their employment on a reserve and the income is not exempt in other guidelines.</p>
 <p>The exemption is prorated to the portion of the income related to the duties the First Nations employee performed on the reserve.</p>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
@@ -664,7 +664,7 @@
 <hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employment income was <strong>not exempt</strong>, <strong>do not</strong> continue to next step.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employment income <strong>was not exempt</strong>, <strong>do not</strong> continue to next step.</p> 
 
 <p>You must deduct CPP, EI and income tax as you would for your other employees. </p> 
 </li>
@@ -686,7 +686,7 @@
 </div>
 <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is all tax-exempt, continue to <a href="#ajax-tab2-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is all exempt, continue to <a href="#ajax-tab2-step3a">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the employment-related income is partly-exempt, continue to <a href="#ajax-tab2-step3b">Step 3 - Withhold and report the payment on a T4A slip</a> and select <strong>income is partly-exempt</strong>.</li>
             </ul>
 
@@ -749,13 +749,7 @@
 </div>
 </details>
 
-<div id="ajax-how-deduct-report">
-<p class="mrgn-tp-lg">Learn more:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-calculator fa-xl text-muted"></span> <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a>  </li>
-<li class="cnjnctn-col"><span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>  </li>
-</ul>
- </div>	 
+<div data-ajax-replace="#ajax-how-deduct-report"></div>
 </li>
 </ol>
 
